<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:padding="10dp"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/invest_user"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/text_color2"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/invest_amount"
        android:textSize="15sp"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="@color/text_color2"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/invest_time"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="15sp"
        android:textColor="@color/text_color2"
        />
</LinearLayout>
