<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ll_call_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:text="@string/open_success"
        android:textColor="@color/text_color2"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/id_txt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:textColor="@color/text_color1"
        android:layout_marginTop="12dp"
        android:textSize="14sp"
        android:text="@string/trade_pwd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/btn_quit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/v1"
            android:background="@drawable/btn_yellow_bg"
            android:text="@string/bind_bank_cancel"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:gravity="center"
            android:paddingTop="8dp"
            android:layout_marginLeft="16dp"
            android:paddingBottom="8dp"
            android:textSize="16sp" />



        <TextView
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_toRightOf="@+id/btn_quit"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:gravity="center"
            android:paddingTop="8dp"
            android:layout_marginLeft="10dp"
            android:paddingBottom="8dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/btn_red_bg"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>