<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ll_call_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:text="@string/getvalue_success"
        android:textColor="@color/text_color2"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_deposit_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:textColor="@color/text_color1"
        android:layout_marginTop="12dp"
        android:text="您的资金托管账户到账1000.00元,请注意查看余额变化.如有变化,请拨打电话\n400-99999-80" />

    <View
        android:id="@+id/v1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentTop="true"
        android:background="@color/divider_gray_1"></View>


    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/btn_confirm"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/text_bule_1"
        android:textSize="16sp" />


</LinearLayout>  